_ops/ranch.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ranch-svc
  labels:
    run: ranch-svc
  namespace: ranch
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 3000
    protocol: TCP
  selector:
    app: ranch
